# market-research-langraph

./: Agent-Project-Structure-Tool.mds  Agentic-Vision.md  AgenticVision.md  ENTERPRISE-AGENT-ARCHITECTURE.md  LangChainMigrationAgenticInfrastructureContext.txt  NEW_CHAT_CONTEXT.md  NEXT-STEPS  PROJECT-QUALITY.md  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
agent/: graph.py  learning_memory.py
prompts/: research_prompts.py
templates/: INPUT-CONTEXT-TEMPLATE  Smart Layered Context Form
