[tool.poetry]
name = "market-research-agent"
version = "0.1.0"
description = "Simple market research agent"
authors = ["Your Name"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.0"  # Changed from 0.1.0
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"  # Optional if using Claude

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
